@@ -39,6 +39,7 @@ export(write.jplace)
 exportClasses(beast)
 exportClasses(codeml)
 exportClasses(codeml_mlc)
+exportClasses(hyphy)
 exportClasses(jplace)
 exportClasses(paml_rst)
 exportMethods("set.treeinfo<-")
