@@ -26,13 +26,13 @@ setMethod("show", signature(object = "codeml"),
                   paste0("'", object@rst@rstfile, "' and '",
                          object@mlc@mlcfile, "'"),
                   ".\n")
-              cat("...@ tree\t:")
+              cat("...@ tree:")
               print.phylo(get.tree(object))                  
-              cat("\n\twith the following features available:\n")
+              cat("\nwith the following features available:\n")
               cat("\t", paste0("'",
                                paste(get.fields(object), collapse="',   '"),
                                "'"),
-                  "\n") 
+                  ".\n") 
               
           })
 
