@@ -49,16 +49,14 @@ setMethod("show", signature(object = "paml_rst"),
               } else {
                   cat(".\n")
               }
-              cat("...@ tree\t:")
+              cat("...@ tree:")
               print.phylo(get.tree(object))                  
-              cat("\n\twith the following features available:\n")
+              cat("\nwith the following features available:\n")
               cat("\t", paste0("'",
                                paste(get.fields(object), collapse="',   '"),
                                "'"),
-                  "\n")
-              
-          }
-          )
+                  ".\n")
+          })
 
 ##' @rdname get.fields-methods
 ##' @exportMethod get.fields
